# Voice_Assist_GPT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alsaplay.cpp  alsaplay.h  build.sh  configure.sh  httpcon.cpp  httpcon.h  messengen.cpp  messengen.h  run.sh  tts.cpp  tts.h
